# rag-qdrant

./: .env.example  .gitignore  README.md  docker-compose.yml  hello.py  ingest.py  pyproject.toml  rag.py
