[project]
name = "rag-qdrant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "openai>=1.50.0",
    "ollama>=0.6.1",
    "pypdf>=6.7.5",
    "qdrant-client>=1.17.0",
    "python-dotenv>=1.0.0",
    "langchain-openai>=1.1.10",
    "langchain-ollama>=1.0.1",
]
